buttons style fix + font sizes and button wrap fix

--- a/atoms/default/client/css/main.scss
+++ b/atoms/default/client/css/main.scss
@@ -111,7 +111,7 @@ body.ios {
     position: relative;
     //margin: 1em 0 2em;
     margin-top: 100px;
-    margin-bottom: 61px;
+    margin-bottom: 43px;
     height: $bar-height;
 
     @include mq($until: tablet) {
@@ -144,8 +144,8 @@ body.ios {
 
     display: block;
     position: absolute;
-    width: 130px;
-    height: 130px;
+    width: 110px;
+    height: 110px;
     top: -91px;
 
     @include mq($until: tablet) {
@@ -191,7 +191,7 @@ body.ios {
         position: absolute;
         top: 0;
         left: 0;
-        width: 226px;
+        width: 206px;
         height: auto;
         z-index: 99;
 
@@ -481,13 +481,13 @@ body.ios {
 
 .group-candidate-button {
     @include fs-textSans(3);
-    font-weight: bold;
+    // font-weight: bold;
     box-sizing: border-box;
-    width: 200px;
+    width: calc(15%);
     min-height: 32px;
     border: 1px solid #dcdcdc;
     border-radius: 16px;
-    background-color: #ffff;
+    background-color: #f6f6f6;
     display: inline-block;
     line-height: 32px;
     padding: 0 6px;
@@ -497,7 +497,7 @@ body.ios {
     outline: none;
 
     @include mq($until: tablet) {
-        width: 140px;
+        width: calc(40%);
     }
 
 
@@ -581,7 +581,7 @@ body.ios {
     @include fs-bodyCopy(1);
     display: inline-block;
     margin-top: 10px;
-    height: 140px;
+    height: 155px;
 
     @include mq($until: tablet) {
         height: auto;
@@ -663,13 +663,12 @@ body.ios {
 .candidate-button {
 
     @include fs-textSans(3);
-    // font-weight: bold;
     box-sizing: border-box;
     width: calc(40%);
     min-height: 32px;
-    border: none;
+    border: 1px solid #dcdcdc;
     border-radius: 16px;
-    background-color: #efede8;
+    background-color: #f6f6f6;
     line-height: 32px;
     padding: 0 6px;
     margin: 0 14px;
@@ -727,7 +726,7 @@ body.ios {
 
     .finish-portrait-wrapper {
         grid-column: 2;
-        grid-row: 3 / span 2;
+        grid-row: 2 / span 2;
     }
 
     .gv-map {
